# 3D-Scan-acquisition-using-Teach-in-with-ROS

./: README.md  TODO.md
catkin_workspace/devel/include/bachelorarbeit/: AddTwoInts.h  pressedRequest.h
catkin_workspace/devel/include/rclock/: logDir.h
catkin_workspace/devel/include/riegl/: Command.h  CommandRequest.h  RieglStatus.h  RieglTime.h  angle.h  angleResponse.h  inclination.h  inclinationRequest.h  inclinationResponse.h  progressRequest.h  scanparamsRequest.h  scanparamsResponse.h  selection.h  selectionRequest.h  selectionResponse.h
catkin_workspace/devel/include/volksbot/: velocitiesRequest.h  vels.h
catkin_workspace/devel/lib/bachelorarbeit/: WPhandler  talker
catkin_workspace/install/: .rosinstall
catkin_workspace/src/bag2scans/: CMakeLists.txt  CMakeLists.txt~
catkin_workspace/src/bag2scans/src/: calibration.cc~  continuousreg.cc  convertriegl.cc  correction.cc  evaluator.h  ghelix6DQ2.cc  graphSlam6DL.h  importer.h  lboctree.h  linescan.cc  linescan.h  lum6Deuler.h  powell.cc  record.cc
catkin_workspace/src/hardwarepraktikum2014/: CMakeLists.txt~  package.xml
catkin_workspace/src/hardwarepraktikum2014/include/: curves.h
catkin_workspace/src/hardwarepraktikum2014/launch/: teach_in.launch~
catkin_workspace/src/hardwarepraktikum2014/src/: gio_path.cpp  gio_path_v_2.cpp~  pfadverfolgung.cpp  pfadverfolgung_v_2.cpp~  regler.cpp~  regleramcl.cpp~  test.cpp~
catkin_workspace/src/lms100/: CMakeLists.txt
catkin_workspace/src/lms100/src/: lms100_cola.h  scanlistener.cc
catkin_workspace/src/rclock/: CMakeLists.txt
catkin_workspace/src/rclock/src/: timesetter.cc
catkin_workspace/src/riegl/: CMakeLists.txt  CMakeLists.txt~
catkin_workspace/src/riegl/include/riegl/: compressed.hpp  fileconn.hpp  fullwave.hpp  pointcloud.hpp  rieglctrl.h  rmsmarker.hpp  rxpmarker.hpp
catkin_workspace/src/riegl/launch/: backpack.launch  backpack_imu.launch  launchnew_imu.sh  parameters_backpack.yaml  riegl.launch~
catkin_workspace/src/riegl/lib/riegl/: CHANGES  config.hpp  ctrlifc.h  ctrllib.hpp  rddpconn.hpp  rdtpconn.hpp  scanexcept.hpp  waveifc.h
catkin_workspace/src/riegl/lib/riegl/.svn/: all-wcprops  entries
catkin_workspace/src/riegl/lib/riegl/.svn/text-base/: buffer.hpp.svn-base  ctrlifc.h.svn-base  ctrllib.hpp.svn-base  fileconn.hpp.svn-base  ridataspec.hpp.svn-base  rmsmarker.hpp.svn-base  scanifc.h.svn-base  scanlib.hpp.svn-base
catkin_workspace/src/riegl/lib/riegl/detail/: binary.hpp  package.hpp
catkin_workspace/src/riegl/lib/riegl/detail/.svn/: entries
catkin_workspace/src/riegl/lib/riegl/detail/.svn/text-base/: baseifc_t.h.svn-base  binary.hpp.svn-base  package.hpp.svn-base  uri.hpp.svn-base
catkin_workspace/src/riegl/lib/riegl/include/riegl/detail/: pointsifc_t.h
catkin_workspace/src/riegl/src/: receiver2D.cc  receiver4D.cc  rxplogger.cc  scanassembler.cc  tslogger.cc
catkin_workspace/src/riegl/srv/: Command.srv  inclination.srv  scanparams.srv  selection.srv
catkin_workspace/src/volksbot/: 42-usb-serial-volksbot.rules  CMakeLists.txt
catkin_workspace/src/volksbot/include/volksbot/: odometry.h
catkin_workspace/src/volksbot/launch/config/: amcl_diff_cfg.yaml  amcl_diff_cfg.yaml~  global_costmap_params.yaml  gmapping_cfg.yaml  gmapping_cfg.yaml~  local_costmap_params.yaml
catkin_workspace/src/volksbot/launch/lehre/: advancedautomation.launch  advancedautomationamcl.launch~
catkin_workspace/src/volksbot/launch/parts/: localcalibration.launch  localjoystick.launch
catkin_workspace/src/volksbot/src/: CVmc.h  ekf_filter.cc  kbcontrol.h  odometry.cc  odometry_main.cc  volksbot.cc
catkin_workspace/src/volksbot/src/Adapter/: CComAdapter.h  IDeviceAdapter.h
catkin_workspace/src/volksbot/src/LayerClasses/: CCommunicationLayer.h  CTranslationLayer.h  CVmc.cpp  CvmcAPI.cpp
catkin_workspace/src/volksbot/src/StorageClasses/: CMotor.cpp  CMotor.h
catkin_workspace/src/volksbot/src/SupportClasses/: CChannel.cpp  CChannel.h  CData.cpp  CData.h  CError.cpp  CMessage.h  CMultisend.h  CRequest.cpp  CRequest.h  CSendTwo.cpp  CTimer.cpp  CTimer.h  Config.h
catkin_workspace/src/volksbot/src/joystick/: .jscontrol.cc.swp  firejet.h  joystick.cc  jscontrol.cc  logitechf710.cc~  logitechf710.h  logitechf710.h~  predator.cc  predator.h
devel/: .catkin  .rosinstall  setup.sh
devel/include/bachelorarbeit/: AddTwoIntsRequest.h  AddTwoIntsResponse.h  pressed.h  pressedResponse.h
devel/include/rclock/: logDirRequest.h  logDirResponse.h
devel/include/riegl/: CommandResponse.h  angleRequest.h  progress.h  progressResponse.h  scanparams.h
devel/include/volksbot/: pose2d.h  ticks.h  velocities.h  velocitiesResponse.h
devel/lib/bachelorarbeit/: listener
devel/lib/bag2scans/: bag2scan  record
devel/lib/hardwarepraktikum2014/: pfaderstellung  pfaderstellung3  regler
devel/lib/my_map_server/: map_saver  rtest
devel/lib/pkgconfig/: bachelorarbeit.pc  bag2scans.pc  my_map_server.pc  rclock.pc  volksbot.pc
devel/lib/riegl/: ctr  raw2scan  receiver4D
devel/lib/volksbot/: calibration
install/include/bachelorarbeit/: AddTwoInts.h  AddTwoIntsResponse.h
obviously-master/obvision/: CMakeLists.txt  CMakeLists.txt~
src/bachelorarbeit/: CMakeLists.txt  CMakeLists.txt~
src/bachelorarbeit/launch/: pathfollowing.launch
src/bag2scans/: calibration.yaml  package.xml~
src/bag2scans/src/: bag2scan.cc  calibration.cc  continuousreg.h  gapx6D.cc  lum6Deuler.cc  timemap.h
src/hardwarepraktikum2014/: CMakeLists.txt  acht.dat~  package.xml~
src/hardwarepraktikum2014/launch/: test.launch~
src/hardwarepraktikum2014/msg/: params.msg
src/hardwarepraktikum2014/src/: curves.h~  curves_v_2.h  curves_v_2.h~  gio_path.cpp~  gio_path_v_2.h  messtechnikamcl.launch~  pfaderstellung.cpp  pfaderstellung_v_2.cpp~  pfadverfolgung_v_2.cpp  vels.h
src/lms100/: package.xml
src/lms100/src/: lms100_cola.cc
src/my_map_server/: CMakeLists.txt
src/rclock/srv/: logDir.srv
src/riegl/include/riegl/: rftifc.h  (+1 more)
src/riegl/src/: receiver.cc  receiver3D.cc  rieglctrl.cc
src/riegl/srv/: progress.srv
src/volksbot/src/: calibration.cc  kbcontrol.cc
(+169 files in other folders)
