<?xml version="1.0"?>
<package>
  <name>lms100</name>
  <version>0.0.0</version>
  <description>Driver for the lms100</description>
  <maintainer email="todo@todo.todo">Jan Elseberg</maintainer>
  <license>BSD</license>
  
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>message_generation</build_depend>


  <run_depend>std_msgs</run_depend>
  <run_depend>message_runtime</run_depend>

</package>


